implememnted payment endpoint using paychnagu
